feat: implemented library service
